# putevoy-ai

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  PLAN_MVP.md  STATUS.md  docker-compose.yml  pyproject.toml
examples/: config_april_2026.json  config_february_2026.json  config_march_2026.json
src/putevoy/: __init__.py  cli.py
src/putevoy/builtin_templates/: preset_mintrans_390_v1.xlsx
src/putevoy/cell_maps/: preset_mintrans_390_v1.json
src/putevoy/generator/: calendar.py  fuel_balance.py  generate.py  models.py  route_planner.py  trip_scheduler.py  validators.py
src/putevoy/geocoding/: address_parser.py  nominatim.py  osrm.py  preprocess.py  service.py  yandex.py
src/putevoy/parsing/: fuel_log_importer.py  fueling_parser.py
src/putevoy/storage/: auth_repo.py  db.py  models.py  repo.py  user_context.py
src/putevoy/web/: app.py  pdf_preview.py  service.py
tests/: conftest.py  test_auth_protection.py  test_calendar.py  test_delete_run.py  test_fuel_balance.py  test_fuel_log_importer.py  test_fueling_parser.py  test_generate.py  test_golden_april_2026.py  test_golden_march_february_2026.py  test_multi_vehicle.py  test_per_user_isolation.py  test_skip_dates.py  test_suggest_next_month.py  test_trip_scheduler.py  test_validators.py  test_waybill_writer_header.py  test_web_app.py
tests/fixtures/: 02__Путевой_лист_февраль_2026.xlsx  03__Путевой_лист_март_2026.xlsx  04__Путевой_лист_апрель_2026.xlsx  Инструкция_Путевые_листы_v2.docx  Топливо_апрель_2026.xlsx  Топливо_март_2026.xlsx  Топливо_февраль_2026.xlsx
(+17 files in other folders)
